--- a/20230140198-react/package.json
+++ b/20230140198-react/package.json
@@ -15,6 +15,7 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.5",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "baseline-browser-mapping": "^2.9.6"
   }
 }
