--- a/20230140198-server/package.json
+++ b/20230140198-server/package.json
@@ -27,5 +27,8 @@
     "react-leaflet": "^5.0.0",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3"
+  },
+  "devDependencies": {
+    "baseline-browser-mapping": "^2.9.6"
   }
 }
